--- a/_posts/2009-07-01-test-version-rtm-ubiquity.textile
+++ b/_posts/2009-07-01-test-version-rtm-ubiquity.textile
@@ -5,10 +5,10 @@ title: Test Version of RTM Ubiquity 0.3.9 Available
 
 h2. {{ page.title }}
 
-A version of the upcoming RTM Ubiquity command is available for beta testing: http://gist.github.com/138132
+A new version of the upcoming RTM Ubiquity command is available for beta testing: <http://gist.github.com/138132>
 
-Issues addressed are listed here: http://github.com/garyhodgson/ubiquity-rtm-api/issues/labels/0.3.9
+The issues addressed are listed here: <http://github.com/garyhodgson/ubiquity-rtm-api/issues/labels/0.3.9>
 
-The main reason for the release will be to mitigate the breakage that the forthcoming Ubiquity (0.5) release will cause.  
+The main reason for the release will be to mitigate the breakage that the forthcoming Ubiquity release (0.5) [will cause](http://github.com/garyhodgson/ubiquity-rtm-api/issues/#issue/11).  
 
-Also worth noting, the documentation will be slightly out of date with this release. Fixing that is on the to-do list.
+Also worth noting, the documentation will be slightly out of date with this release. Fixing that is on the [to-do list](http://github.com/garyhodgson/ubiquity-rtm-api/issues/#issue/12).
