--- a/_posts/2009-07-07-version-0-4-rtm-ubiquity-released.textile
+++ b/_posts/2009-07-07-version-0-4-rtm-ubiquity-released.textile
@@ -25,10 +25,10 @@ h3. Changes
 h3. Notes
 
 
-The [upcoming release](https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.5_Release_Notes) of Ubiquity makes some pretty major changes and consequently it breaks compatibility with previous commands.  You can read more [here](http://www.azarask.in/blog/post/ubiquity-05-conondrum/].  In order to handle this break without having to manage multiple releases of the commands (hey, it's supposed to be easy to author commands right?) I have modified the commands to recognise if the new parser is in effect, and if so to use the new commands, otherwise to use the older version.
+The [upcoming release](https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.5_Release_Notes) of Ubiquity makes some pretty major changes and consequently it breaks compatibility with previous commands.  You can read more [here](http://www.azarask.in/blog/post/ubiquity-05-conondrum/)  In order to handle this break without having to manage multiple releases of the commands (hey, it's supposed to be easy to author commands right?) I have modified the commands to recognise if the new parser is in effect, and if so to use the new commands, otherwise to use the older version.
 
-For the most part the commands should remain the same, however there is one change in the new parser which directly affects the user: the name of some of the parameters will change with parser 2.  For example, "rtm-view-tasks in list" is now "rtm-view-tasks from list".  This is pretty confusing, and frustrating, and I have raised the problem in the [ubiquity group](http://groups.google.com/group/ubiquity-firefox/browse_thread/thread/d57bedce5b3261eb/76f88838ee216709#76f88838ee216709], but there seems nothing that can be done about at the moment.  And so all I can recommend is to take care with entering commands after the upgrade.
+For the most part the commands should remain the same, however there is one change in the new parser which directly affects the user: the name of some of the parameters will change with parser 2.  For example, "rtm-view-tasks in list" is now "rtm-view-tasks from list".  This is pretty confusing, and frustrating, and I have raised the problem in the [ubiquity group](http://groups.google.com/group/ubiquity-firefox/browse_thread/thread/d57bedce5b3261eb/76f88838ee216709#76f88838ee216709), but there seems nothing that can be done about at the moment.  And so all I can recommend is to take care with entering commands after the upgrade.
 
-Of course you can decide not to upgrade to the new version of Ubiquity, or upgrade and then turn off the new parser (under 'settings' at <about:ubiquity>), until everything is running smoothly.  I have made previous versions of the RTM Ubiquity command available under the ['releases'](http://garyhodgson.github.com/ubiquity-rtm-api/#Releases) section of the documentation.  The last (pre 0.5) version is available [here](http://garyhodgson.github.com/ubiquity-rtm-api/version.html?version=0.3.8].
+Of course you can decide not to upgrade to the new version of Ubiquity, or upgrade and then turn off the new parser (under 'settings' at <about:ubiquity>), until everything is running smoothly.  I have made previous versions of the RTM Ubiquity command available under the ['releases'](http://garyhodgson.github.com/ubiquity-rtm-api/#Releases) section of the documentation.  The last (pre 0.5) version is available [here](http://garyhodgson.github.com/ubiquity-rtm-api/version.html?version=0.3.8).
 
-Just to make matters worse I will be on holiday until August (and will be nowhere near a computer), but as the Ubiquity release is imminent, and will definitely break the commands, I wanted to get this out beforehand.  I suggest any issues are either tracked via the [github page](http://github.com/garyhodgson/ubiquity-rtm-api/issues], or via email.
+Just to make matters worse I will be on holiday until August (and will be nowhere near a computer), but as the Ubiquity release is imminent, and will definitely break the commands, I wanted to get this out beforehand.  I suggest any issues are either tracked via the [github page](http://github.com/garyhodgson/ubiquity-rtm-api/issues), or via email.
